<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <!-- Back Button -->
    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/back_button_desc"/>

    <!-- Song Title -->
    <TextView
        android:id="@+id/song_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/back_button"
        android:layout_toStartOf="@id/menu_button"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="60dp"
        android:text="@string/title_song"
        android:textColor="#FFEB3B"
        android:textSize="25sp" />

    <!-- Options Menu -->
    <ImageButton
        android:id="@+id/menu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_menu"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/menu_button_desc"/>

    <!-- Album Cover -->
    <ImageView
        android:id="@+id/album_cover"
        android:contentDescription="@string/description_content"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerInParent="true"
        android:src="@drawable/album_cover_image"
        android:layout_marginBottom="24dp"
        android:layout_below="@id/song_title"/>

    <!-- Progress Bar -->
    <SeekBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/album_cover"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:progressDrawable="@drawable/progress_bar"
        android:thumb="@drawable/thumb_icon"
        android:thumbOffset="0dp"
        android:splitTrack="false"
        android:progress="0"
        android:max="100"/>

    <!-- Song Artist -->
    <TextView
        android:id="@+id/artist_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/band_name"
        android:textColor="#FF8F00"
        android:textSize="18sp"
        android:layout_below="@id/progress_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>

    <!-- Song Name -->
    <TextView
        android:id="@+id/song_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_song"
        android:textColor="#FFB300"
        android:textSize="18sp"
        android:layout_below="@id/artist_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"/>

    <!-- Previous Button -->

    <!-- Play Button -->
    <ImageButton
        android:id="@+id/prev_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@id/song_name"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="25dp"
        android:layout_toStartOf="@id/play_button"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/prev_button_desc"
        android:src="@drawable/ic_prev" />

    <ImageButton
        android:id="@+id/play_button"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/ic_play"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_below="@id/song_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/play_button_desc"/>

    <!-- Next Button -->
    <ImageButton
        android:id="@+id/next_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@id/song_name"
        android:layout_marginStart="25dp"
        android:layout_marginTop="75dp"
        android:layout_toEndOf="@id/play_button"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/next_button_desc"
        android:src="@drawable/ic_next" />

</RelativeLayout>
